trying slack -fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,4 +149,4 @@ workflows:
             tags:
               only: /^v.*/
           requires:
-            - pause_workflow
+            - paused_workflow
