--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
       - run: echo "deploy my app"
       - slack/notify:
           event: fail
-          mentions: '@EngineeringTeam'
+          mentions: '@Mohamed Raslan'
           template: basic_fail_1
       - slack/notify:
           event: pass
