--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,26 @@ version: 2.1
 orbs:
   slack: circleci/slack@4.1
 
+
+commands:
+  notify_slack_fails:
+    parameters:
+      on-success:
+        description: Notify also on-success
+        type: boolean
+        default: false
+    steps:
+      - slack/notify:
+          event: fail
+          mentions: '@Mohamed Raslan'
+          template: basic_fail_1
+      - when:
+          condition: << parameters.on-success >>
+          steps:
+            - slack/notify:
+                event: pass
+                template: success_tagged_deploy_1
+
 jobs:
   build-frontend:
     docker:
@@ -19,6 +39,7 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
+      - notify_slack_fails
 
   build-backend:
     docker:
@@ -36,6 +57,8 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+      - notify_slack_fails
+
 
   test-frontend:
     docker:
@@ -50,6 +73,8 @@ jobs:
             cd frontend
             npm install
             npm run test
+      - notify_slack_fails:
+          on-success: true
 
   test-backend:
     docker:
@@ -64,6 +89,8 @@ jobs:
             cd backend
             npm install
             npm run test
+      - notify_slack_fails:
+          on-success: true
 
   scan-frontend:
     docker:
@@ -79,6 +106,8 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
+      - notify_slack_fails:
+          on-success: true
 
   scan-backend:
     docker:
@@ -93,9 +122,9 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-            npm audit fix --force
             npm audit --audit-level=critical
-
+      - notify_slack_fails:
+          on-success: true
 
   deploy:
     docker:
@@ -135,13 +164,10 @@ workflows:
             tags:
               only: /^v.*/
           requires:
-            - test
+            - scan-backend
+            - scan-frontend
       - paused_workflow:
-          filters:
-            tags:
-              only: /^v.*/
           requires:
-            - test
             - slack/on-hold
           type: approval
       - deploy:
