5.Configuration Management - 1. Infrastructure Phase - 1.a. Create the Infrastructure - fix the failure

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,7 @@ workflows:
           context: UdaPeopleSuperPower
           requires: [build-backend]
       - deploy-infrastructure:
+          context: UdaPeopleSuperPower
           requires: [test-frontend, scan-frontend, test-backend, scan-backend]
           filters:
             branches:
