5.Configuration Management - 1. Infrastructure Phase - 1.b. Configure Infrastructure 1

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,3 +234,6 @@ workflows:
           filters:
             branches:
               only: [master]
+      - configure-infrastructure:
+          context: UdaPeopleSuperPower
+          requires: [deploy-infrastructure]
