--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ jobs:
             cat ./.circleci/ansible/inventory.txt
 
       - persist_to_workspace:
-          root: ./circleci/ansible
+          root: ./.circleci/ansible
           paths:
             - inventory.txt
 
