--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
 
   configure-infrastructure:
     docker:
-      - image: ansible/ansible:default
+      - image: python:3.8-alpine
     steps:
       - checkout
       - add_ssh_keys:
@@ -196,8 +196,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update tar gzip ansible awscli
-
+            apk add --update tar gzip ansible
+            pip3 install awscli
       - run:
           name: Configure server
           command: |
