--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,7 +230,7 @@ workflows:
           requires: [build-backend]
       - deploy-infrastructure:
           context: UdaPeopleSuperPower
-          requires: [test-frontend, scan-frontend, test-backend, scan-backend]
+          # requires: [test-frontend, scan-frontend, test-backend, scan-backend]
           filters:
             branches:
               only: [master]
