--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,29 +1,16 @@
 - name: Update apt repo and cache on all Debian/Ubuntu boxes
   apt:
     update_cache: yes
-    force_apt_get: yes
-    cache_valid_time: 3600
 
 - name: Upgrade all packages on servers
   apt:
-    upgrade: dist
-    force_apt_get: yes
+    upgrade: yes
 
-- name: Install the gpg key for nodejs LTS
-  apt_key:
-    url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
-    state: present
-
-- name: Install the nodejs LTS repos
-  apt_repository:
-    repo: "deb https://deb.nodesource.com/node_14.x xenial main"
-    state: present
-    update_cache: yes
-
-- name: Install the nodejs
+- name: Install dependencies
   apt:
-    name: nodejs
-    state: present
+    name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
 - name: install pm2
   command: npm install pm2 -g
