--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ commands:
              aws s3 rb s3://udapeople-<<parameters.current_workflow_id>>
              aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.current_workflow_id>>
              aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.current_workflow_id>>
+
+
 jobs:
   build-frontend:
     docker:
@@ -208,6 +210,33 @@ jobs:
            current_workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - notify_slack_fails
 
+  run-migrations:
+    docker:
+      - image: node:14.19-alpine
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .circleci/ansible/
+
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            # Run and save the migration output
+            npm run migrations > migrations_dump.txt
+
+      - run:
+          name: Send migration results to kvdb
+          command: |
+          if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+          then
+              curl https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+          fi
+
+      - destroy-environment:
+           current_workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - notify_slack_fails
 
 workflows:
   default:
@@ -230,7 +259,7 @@ workflows:
           requires: [build-backend]
       - deploy-infrastructure:
           context: UdaPeopleSuperPower
-          # requires: [test-frontend, scan-frontend, test-backend, scan-backend]
+          requires: [test-frontend, scan-frontend, test-backend, scan-backend]
           filters:
             branches:
               only: [master]
