--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: node:14.19-alpine
+      - image: node:12-alpine
     steps:
       - checkout
       - attach_workspace:
@@ -244,6 +244,7 @@ jobs:
             npm install
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
 
       - run:
           name: Send migration results to kvdb
@@ -258,7 +259,6 @@ jobs:
       - revert-migrations:
            current_workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - notify_slack_fails
-
 
   deploy-frontend:
     docker:
