5.Configuration Management - 3. Smoke Test Phase 4

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -9,7 +9,7 @@
     dest: ~/backend-app
 
 - name: Install the node dependencies for the backend-app
-  command: npm npm install
+  command: npm install
   args:
     chdir: ~/backend-app
 
