--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: node:12-alpine
+      - image: amazon/aws-cli
     steps:
       - checkout
       - attach_workspace:
@@ -239,8 +239,12 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update tar gzip curl
-            pip3 install awscli
+            curl -sL https://rpm.nodesource.com/setup_12.x | bash -
+            yum clean all && yum makecache fast
+            yum install -y gcc-c++ make
+            yum install -y nodejs
+            yum install -y tar gzip python3 curl
+            pip3 install ansible awscli
 
       - run:
           name: Run migrations
