--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: amazon/aws-cli
+      - image: python:3.8-alpine
     steps:
       - checkout
       - attach_workspace:
