5.Configuration Management - 3. Smoke Test Phase 8

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,7 +231,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: python:3.8-alpine
+      - image: amazon/aws-cli
     steps:
       - checkout
       - attach_workspace:
@@ -239,12 +239,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            curl -sL https://rpm.nodesource.com/setup_12.x | bash -
-            yum clean all && yum makecache fast
-            yum install -y gcc-c++ make
-            yum install -y nodejs
             yum install -y tar gzip python3 curl
             pip3 install ansible awscli
+            curl -sL https://rpm.nodesource.com/setup_12.x | bash -
+            yum install -y gcc-c++ make
+            yum install -y nodejs
 
       - run:
           name: Run migrations
@@ -277,12 +276,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            curl -sL https://rpm.nodesource.com/setup_12.x | bash -
-            yum clean all && yum makecache fast
-            yum install -y gcc-c++ make
-            yum install -y nodejs
             yum install -y tar gzip python3 curl
             pip3 install ansible awscli
+            curl -sL https://rpm.nodesource.com/setup_12.x | bash -
+            yum install -y gcc-c++ make
+            yum install -y nodejs
 
       - run:
           name: Check the node version
