--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,12 +50,15 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl --insecure  https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/migration_<< parameters.current_workflow_id >>)
-            if(( $SUCCESS==1 ));
+            SUCCESS = $(curl https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/migration_<< parameters.current_workflow_id >>)
+
+            if[  ${success}==1 ];
             then
               cd ~/project/backend
               npm install
               npm run migration:revert
+            else
+             echo "The revet migration didn't happen"
             fi
 
 jobs:
@@ -244,7 +247,7 @@ jobs:
             npm install
 
             touch .env
-            echo ENVIROMENT=$ENVIROMENT >> ./.env
+            echo ENVIROMENT=production >> ./.env
             echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ./.env
             echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ./.env
             echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ./.env
@@ -254,7 +257,7 @@ jobs:
             echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ./.env
             echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ./.env
             echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ./.env
-
+            cat .env
             # Run and save the migration output
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
@@ -262,6 +265,7 @@ jobs:
       - run:
           name: Send migration results to kvdb
           command: |
+            pwd && ls -al
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
                 curl https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
