--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,10 +436,10 @@ jobs:
             --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
             --tags project=udapeople
 
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+           current_workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+           current_workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - notify_slack_fails
 
   cleanup:
