--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,8 @@ commands:
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
             SUCCESS=$(curl --insecure https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/migration_<< parameters.current_workflow_id >>)
-            if(( "$SUCCESS"=="1" ));
+            echo the var Success :: $SUCCESS
+            if[ '$SUCCESS'=='1'];
             then
               cd ~/project/backend
               npm install
