--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,6 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip python3 curl
-            pip3 install ansible awscli
 
       - run:
           name: Ensure backend infrastructure exist
@@ -284,7 +283,6 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip python3 curl
-            pip3 install ansible awscli
             curl -sL https://rpm.nodesource.com/setup_12.x | bash -
             yum install -y gcc-c++ make
             yum install -y nodejs
@@ -300,8 +298,8 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text)
-            export API_URL="http://${BACKEND_IP}:3030"
-            echo "API_URL = ${API_URL}"
+
+            echo API_URL="http://${BACKEND_IP}:3030"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
 
@@ -426,7 +424,6 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip python3 curl
-            pip3 install ansible awscli
 
       - run:
           name: Save the old stack workflow id
@@ -462,7 +459,6 @@ jobs:
           name: Install dependencies
           command: |
             yum install -y tar gzip python3 curl
-            pip3 install ansible awscli
 
       - run:
           name: Get old stack workflow id and remove old stacks and files
@@ -484,7 +480,7 @@ jobs:
               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
               aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
-              echo exit with out cleaning
+              echo exit without cleaning
             fi
 
       - notify_slack_fails
