--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -447,8 +447,7 @@ jobs:
       - run:
           name: Clear cloudfront cache
           command: |
-            export OldWorkflowID=$(curl --insecure https://kvdb.io/VLkDX5m1CdjRzJ6samFuRw/OldWorkflowID_${CIRCLE_WORKFLOW_ID:0:7})
-            export CloudFrontDistID=$(aws cloudfront list-distributions --query "DistributionList.Items[*].{id:Id,origin:Origins.Items[0].DomainName}[?origin=='udapeople-${OldWorkflowID}.s3.amazonaws.com'].id"  --output text)
+            export CloudFrontDistID=$(aws cloudfront list-distributions --query "DistributionList.Items[*].{id:Id,origin:Origins.Items[0].DomainName}[?origin=='udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3.amazonaws.com'].id"  --output text)
             echo CloudFrontDistID:"${CloudFrontDistID}"
             aws cloudfront create-invalidation --distribution-id ${CloudFrontDistID} --paths '/*'
 
